--- a/app/src/main/res/layout/activity_select_device.xml
+++ b/app/src/main/res/layout/activity_select_device.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SelectDeviceActivity"
-    android:background="@drawable/b_vernetzung">
+    android:background="@drawable/background_app">
 
     <TextView
         android:id="@+id/textHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="8dp"
         android:text="Available BT Connections"
         android:textAlignment="center"
@@ -20,17 +20,20 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/dark_blue"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/deviceList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/textHeader"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
